Adjustment to update to latest

--- a/Classification_1_CW_MH.ipynb
+++ b/Classification_1_CW_MH.ipynb
@@ -27,6 +27,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.impute import KNNImputer\n",
     "\n",
     "from sklearn.metrics import f1_score, accuracy_score, precision_score, recall_score, classification_report\n",
     "from sklearn import metrics  \n",
@@ -1549,7 +1550,7 @@
     "Test = pd.read_csv(\"TestData1.csv\", header=None)\n",
     "\n",
     "#Replace all 1.000000e+99 with nan\n",
-    "Test[Test > 100] = np.nan\n",
+    "Test[Test > 1000] = np.nan\n",
     "\n",
     "# Separate numerical columns\n",
     "numerical_cols = Test.select_dtypes(include=['float64', 'int64']).columns\n",
@@ -1571,6 +1572,13 @@
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing value percentage: 1.9993963175369758 %\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1618,7 +1626,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>3.824254</td>\n",
        "      <td>1.923762</td>\n",
        "      <td>1.918450</td>\n",
@@ -1642,11 +1650,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>3.904190</td>\n",
        "      <td>2.309524</td>\n",
        "      <td>2.152930</td>\n",
-       "      <td>2.448697</td>\n",
+       "      <td>2.553395</td>\n",
        "      <td>3.532368</td>\n",
        "      <td>3.524866</td>\n",
        "      <td>3.677791</td>\n",
@@ -1666,7 +1674,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>3.750908</td>\n",
        "      <td>1.161068</td>\n",
        "      <td>1.017033</td>\n",
@@ -1690,7 +1698,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>3.809383</td>\n",
        "      <td>1.912355</td>\n",
        "      <td>1.856940</td>\n",
@@ -1698,7 +1706,7 @@
        "      <td>3.289406</td>\n",
        "      <td>3.371232</td>\n",
        "      <td>3.541995</td>\n",
-       "      <td>3.480031</td>\n",
+       "      <td>3.491048</td>\n",
        "      <td>3.473179</td>\n",
        "      <td>...</td>\n",
        "      <td>1.869965</td>\n",
@@ -1714,7 +1722,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>3.893561</td>\n",
        "      <td>2.094192</td>\n",
        "      <td>1.881271</td>\n",
@@ -1762,12 +1770,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>145</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>3.901178</td>\n",
        "      <td>1.672421</td>\n",
        "      <td>1.869554</td>\n",
        "      <td>2.234758</td>\n",
-       "      <td>3.346161</td>\n",
+       "      <td>3.174569</td>\n",
        "      <td>3.469689</td>\n",
        "      <td>3.565574</td>\n",
        "      <td>3.653364</td>\n",
@@ -1786,7 +1794,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>146</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>3.865257</td>\n",
        "      <td>1.796990</td>\n",
        "      <td>1.643650</td>\n",
@@ -1795,7 +1803,7 @@
        "      <td>3.410870</td>\n",
        "      <td>3.527868</td>\n",
        "      <td>3.488609</td>\n",
-       "      <td>3.593184</td>\n",
+       "      <td>3.580376</td>\n",
        "      <td>...</td>\n",
        "      <td>2.183981</td>\n",
        "      <td>2.519171</td>\n",
@@ -1810,10 +1818,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>147</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>3.860198</td>\n",
        "      <td>2.097778</td>\n",
-       "      <td>1.878274</td>\n",
+       "      <td>1.969556</td>\n",
        "      <td>2.438788</td>\n",
        "      <td>3.365076</td>\n",
        "      <td>3.391729</td>\n",
@@ -1821,7 +1829,7 @@
        "      <td>3.408433</td>\n",
        "      <td>3.531799</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.683940</td>\n",
+       "      <td>2.118074</td>\n",
        "      <td>2.478032</td>\n",
        "      <td>1.358316</td>\n",
        "      <td>2.125741</td>\n",
@@ -1834,7 +1842,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>148</th>\n",
-       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>3.907102</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.473633</td>\n",
@@ -1858,7 +1866,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>3.763867</td>\n",
        "      <td>2.281193</td>\n",
        "      <td>2.199179</td>\n",
@@ -1887,28 +1895,28 @@
       ],
       "text/plain": [
        "     0         1         2         3         4         5         6     \\\n",
-       "0       1  3.824254  1.923762  1.918450  2.352067  3.117298  3.051735   \n",
-       "1       1  3.904190  2.309524  2.152930  2.448697  3.532368  3.524866   \n",
-       "2       2  3.750908  1.161068  1.017033  2.347993  3.381889  3.393096   \n",
-       "3       1  3.809383  1.912355  1.856940  2.498944  3.289406  3.371232   \n",
-       "4       1  3.893561  2.094192  1.881271  2.785707  3.344339  3.274417   \n",
+       "0     1.0  3.824254  1.923762  1.918450  2.352067  3.117298  3.051735   \n",
+       "1     1.0  3.904190  2.309524  2.152930  2.553395  3.532368  3.524866   \n",
+       "2     2.0  3.750908  1.161068  1.017033  2.347993  3.381889  3.393096   \n",
+       "3     1.0  3.809383  1.912355  1.856940  2.498944  3.289406  3.371232   \n",
+       "4     1.0  3.893561  2.094192  1.881271  2.785707  3.344339  3.274417   \n",
        "..    ...       ...       ...       ...       ...       ...       ...   \n",
-       "145     1  3.901178  1.672421  1.869554  2.234758  3.346161  3.469689   \n",
-       "146     1  3.865257  1.796990  1.643650  2.307902  3.411704  3.410870   \n",
-       "147     1  3.860198  2.097778  1.878274  2.438788  3.365076  3.391729   \n",
-       "148     4  3.907102  1.000000  1.473633  2.158604  3.459391  3.478222   \n",
-       "149     1  3.763867  2.281193  2.199179  2.579235  3.382473  3.375192   \n",
+       "145   1.0  3.901178  1.672421  1.869554  2.234758  3.174569  3.469689   \n",
+       "146   1.0  3.865257  1.796990  1.643650  2.307902  3.411704  3.410870   \n",
+       "147   1.0  3.860198  2.097778  1.969556  2.438788  3.365076  3.391729   \n",
+       "148   4.0  3.907102  1.000000  1.473633  2.158604  3.459391  3.478222   \n",
+       "149   1.0  3.763867  2.281193  2.199179  2.579235  3.382473  3.375192   \n",
        "\n",
        "         7         8         9     ...      3303      3304      3305  \\\n",
        "0    3.307977  3.430222  3.586667  ...  1.836830  1.855640  1.142389   \n",
        "1    3.677791  3.636671  3.696868  ...  1.951532  1.442323  1.000000   \n",
        "2    3.509134  3.512466  3.622203  ...  1.000000  1.584105  1.000000   \n",
-       "3    3.541995  3.480031  3.473179  ...  1.869965  1.481658  1.000000   \n",
+       "3    3.541995  3.491048  3.473179  ...  1.869965  1.481658  1.000000   \n",
        "4    3.485872  3.516527  3.642358  ...  1.480725  1.510545  1.000000   \n",
        "..        ...       ...       ...  ...       ...       ...       ...   \n",
        "145  3.565574  3.653364  3.720899  ...  2.140555  1.960423  1.240300   \n",
-       "146  3.527868  3.488609  3.593184  ...  2.183981  2.519171  1.000000   \n",
-       "147  3.461051  3.408433  3.531799  ...  1.683940  2.478032  1.358316   \n",
+       "146  3.527868  3.488609  3.580376  ...  2.183981  2.519171  1.000000   \n",
+       "147  3.461051  3.408433  3.531799  ...  2.118074  2.478032  1.358316   \n",
        "148  3.621380  3.480155  3.595473  ...  2.232310  1.380573  1.000000   \n",
        "149  3.514874  3.597044  3.663170  ...  2.295435  1.488551  1.000000   \n",
        "\n",
@@ -1939,17 +1947,26 @@
     "df = pd.concat([Label,Train], axis=1, ignore_index=True)\n",
     "\n",
     "#Replace all 1.000000e+99 with nan\n",
-    "df[df > 100] = np.nan\n",
+    "df[df > 1000] = np.nan\n",
     "\n",
-    "# Separate numerical columns\n",
-    "numerical_cols = df.select_dtypes(include=['float64', 'int64']).columns\n",
+    "# Total number of entries\n",
+    "total = df.size\n",
     "\n",
-    "# Imput missing values for numerical columns using the mean\n",
-    "for col in numerical_cols:\n",
-    "    if df[col].isnull().sum() > 0:\n",
-    "        mean_value = df[col].mean()\n",
-    "        df[col] = df[col].fillna(mean_value)\n",
-    "        #print(f\"Imputed missing values in '{col}' with mean: {mean_value}\")\n",
+    "# Count of NaN values\n",
+    "nan_count = df.isna().sum().sum()\n",
+    "\n",
+    "# Count of Non-NaN values\n",
+    "non_nan_count = total - nan_count\n",
+    "print(\"Missing value percentage:\",nan_count/total * 100,\"%\")\n",
+    "\n",
+    "# Initialize the KNNImputer\n",
+    "imputer = KNNImputer(n_neighbors=5) \n",
+    "\n",
+    "# Fit and transform the data\n",
+    "imputed_data = imputer.fit_transform(df)\n",
+    "\n",
+    "# Convert the result back to a DataFrame\n",
+    "df = pd.DataFrame(imputed_data, columns=df.columns)\n",
     "df"
    ]
   },
@@ -2029,6 +2046,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Scores for KNN 1st data set\n",
       "Accuracy: 0.9\n",
       "F1 Score: 0.8798581560283687\n",
       "Recall: 0.9\n",
@@ -2063,7 +2081,7 @@
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "recall = recall_score(y_test, y_pred,average='weighted')\n",
     "precision = precision_score(y_test, y_pred,average='weighted', zero_division= np.nan)\n",
-    "\n",
+    "print(\"Scores for KNN 1st data set\")\n",
     "print(\"Accuracy:\", accuracy)\n",
     "print(\"F1 Score:\", f1)\n",
     "print(\"Recall:\", recall)\n",
@@ -2089,9 +2107,10 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Prediction labels for test set\n",
-      "[2 1 1 1 1 2 1 1 3 1 3 1 1 3 5 1 1 1 1 1 1 4 3 3 4 1 5 4 1 3 1 1 4 1 3 1 1\n",
-      " 4 3 5 1 1 4 1 1 1 1 1 1 1 1 1 1]\n"
+      "Prediction labels for test set 1\n",
+      "[2. 1. 1. 1. 1. 2. 1. 1. 3. 1. 3. 1. 1. 3. 5. 1. 1. 1. 1. 1. 1. 4. 3. 3.\n",
+      " 4. 1. 5. 4. 1. 3. 1. 1. 4. 1. 3. 1. 1. 4. 3. 5. 1. 1. 4. 1. 1. 1. 1. 1.\n",
+      " 1. 1. 1. 1. 1.]\n"
      ]
     }
    ],
@@ -2118,13 +2137,21 @@
     "y_pred = svm_model.predict(Test_scaled)\n",
     "\n",
     "\n",
-    "print(\"\\nPrediction labels for test set\")\n",
+    "print(\"\\nPrediction labels for test set 1\")\n",
     "print(y_pred)\n",
     "\n",
     "#print(\"Actual labels for training set\")\n",
     "#y_test_array = y_test.to_numpy()\n",
     "#print(y_test_array)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b4b03bf-95ec-4314-8ef3-8d1a66882d6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -2143,7 +2170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
