--- a/Classification_2_CW_MH.ipynb
+++ b/Classification_2_CW_MH.ipynb
@@ -27,6 +27,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.impute import KNNImputer\n",
     "\n",
     "from sklearn.metrics import f1_score, accuracy_score, precision_score, recall_score, classification_report\n",
     "from sklearn import metrics  \n",
@@ -425,6 +426,13 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing value percentage: 0.0 %\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -471,7 +479,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>2.36</td>\n",
        "      <td>1.51</td>\n",
        "      <td>1.48</td>\n",
@@ -495,7 +503,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>2.00</td>\n",
        "      <td>1.63</td>\n",
        "      <td>1.74</td>\n",
@@ -519,7 +527,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.93</td>\n",
        "      <td>1.30</td>\n",
        "      <td>1.45</td>\n",
@@ -543,7 +551,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>2.23</td>\n",
        "      <td>1.60</td>\n",
        "      <td>1.56</td>\n",
@@ -567,7 +575,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.76</td>\n",
        "      <td>1.62</td>\n",
        "      <td>1.30</td>\n",
@@ -615,7 +623,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>95</th>\n",
-       "      <td>11</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>2.61</td>\n",
        "      <td>1.70</td>\n",
        "      <td>1.30</td>\n",
@@ -639,7 +647,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
-       "      <td>11</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>2.72</td>\n",
        "      <td>1.69</td>\n",
        "      <td>2.29</td>\n",
@@ -663,7 +671,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
-       "      <td>11</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>2.53</td>\n",
        "      <td>1.71</td>\n",
        "      <td>1.30</td>\n",
@@ -687,7 +695,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
-       "      <td>11</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>2.50</td>\n",
        "      <td>1.64</td>\n",
        "      <td>1.69</td>\n",
@@ -711,7 +719,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
-       "      <td>11</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>2.72</td>\n",
        "      <td>1.30</td>\n",
        "      <td>1.30</td>\n",
@@ -740,17 +748,17 @@
       ],
       "text/plain": [
        "    0     1     2     3     4     5     6     7     8     9     ...  9173  \\\n",
-       "0      1  2.36  1.51  1.48  1.30  2.99  1.30  2.73  3.28  3.53  ...  1.53   \n",
-       "1      1  2.00  1.63  1.74  1.82  3.70  1.30  3.00  3.12  3.36  ...  1.76   \n",
-       "2      1  1.93  1.30  1.45  1.30  3.38  1.30  3.05  3.39  3.36  ...  1.98   \n",
-       "3      1  2.23  1.60  1.56  1.91  3.42  1.30  3.08  3.29  3.36  ...  1.79   \n",
-       "4      1  1.76  1.62  1.30  2.03  3.55  1.30  3.17  3.14  3.50  ...  1.30   \n",
+       "0    1.0  2.36  1.51  1.48  1.30  2.99  1.30  2.73  3.28  3.53  ...  1.53   \n",
+       "1    1.0  2.00  1.63  1.74  1.82  3.70  1.30  3.00  3.12  3.36  ...  1.76   \n",
+       "2    1.0  1.93  1.30  1.45  1.30  3.38  1.30  3.05  3.39  3.36  ...  1.98   \n",
+       "3    1.0  2.23  1.60  1.56  1.91  3.42  1.30  3.08  3.29  3.36  ...  1.79   \n",
+       "4    1.0  1.76  1.62  1.30  2.03  3.55  1.30  3.17  3.14  3.50  ...  1.30   \n",
        "..   ...   ...   ...   ...   ...   ...   ...   ...   ...   ...  ...   ...   \n",
-       "95    11  2.61  1.70  1.30  1.30  2.16  1.30  3.16  3.16  3.14  ...  1.78   \n",
-       "96    11  2.72  1.69  2.29  1.40  1.30  1.30  3.17  4.06  3.25  ...  2.28   \n",
-       "97    11  2.53  1.71  1.30  1.30  2.40  3.03  3.23  3.25  3.01  ...  1.99   \n",
-       "98    11  2.50  1.64  1.69  1.30  2.40  2.37  3.13  3.23  3.38  ...  1.76   \n",
-       "99    11  2.72  1.30  1.30  2.34  1.70  1.30  3.34  3.11  3.20  ...  1.89   \n",
+       "95  11.0  2.61  1.70  1.30  1.30  2.16  1.30  3.16  3.16  3.14  ...  1.78   \n",
+       "96  11.0  2.72  1.69  2.29  1.40  1.30  1.30  3.17  4.06  3.25  ...  2.28   \n",
+       "97  11.0  2.53  1.71  1.30  1.30  2.40  3.03  3.23  3.25  3.01  ...  1.99   \n",
+       "98  11.0  2.50  1.64  1.69  1.30  2.40  2.37  3.13  3.23  3.38  ...  1.76   \n",
+       "99  11.0  2.72  1.30  1.30  2.34  1.70  1.30  3.34  3.11  3.20  ...  1.89   \n",
        "\n",
        "    9174  9175  9176  9177  9178  9179  9180  9181  9182  \n",
        "0   1.79  2.00  1.48  1.92  1.76  2.03  2.11  1.87   1.3  \n",
@@ -779,17 +787,26 @@
     "df = pd.concat([Label,Train], axis=1, ignore_index=True)\n",
     "\n",
     "#Replace all 1.000000e+99 with nan\n",
-    "df[df > 100] = np.nan\n",
+    "df[df > 1000] = np.nan\n",
     "\n",
-    "# Separate numerical columns\n",
-    "numerical_cols = df.select_dtypes(include=['float64', 'int64']).columns\n",
+    "# Total number of entries\n",
+    "total = df.size\n",
     "\n",
-    "# Imput missing values for numerical columns using the mean\n",
-    "for col in numerical_cols:\n",
-    "    if df[col].isnull().sum() > 0:\n",
-    "        mean_value = df[col].mean()\n",
-    "        df[col] = df[col].fillna(mean_value)\n",
-    "        #print(f\"Imputed missing values in '{col}' with mean: {mean_value}\")\n",
+    "# Count of NaN values\n",
+    "nan_count = df.isna().sum().sum()\n",
+    "\n",
+    "# Count of Non-NaN values\n",
+    "non_nan_count = total - nan_count\n",
+    "print(\"Missing value percentage:\",nan_count/total * 100,\"%\")\n",
+    "\n",
+    "# Initialize the KNNImputer\n",
+    "imputer = KNNImputer(n_neighbors=5) \n",
+    "\n",
+    "# Fit and transform the data\n",
+    "imputed_data = imputer.fit_transform(df)\n",
+    "\n",
+    "# Convert the result back to a DataFrame\n",
+    "df = pd.DataFrame(imputed_data, columns=df.columns)\n",
     "df"
    ]
   },
@@ -929,11 +946,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Prediction labels for test set\n",
-      "[ 3 11  2  4  8  3 10  8  4  3 10 11  1  1 10 11 10  3  8 10  4  4  4  4\n",
-      "  4  4  4  4  5  4 10 11 10 11 11 10 11  3  3  3  3  3  3  3  3  3  1  1\n",
-      "  1  1  1  1  1  1  1  1  1  1  1  1  2  8  8  8 11  8  8  8  2  8  8  8\n",
-      "  8  8]\n"
+      "Prediction labels for test set 2\n",
+      "[ 3. 11.  2.  4.  8.  3. 10.  8.  4.  3. 10. 11.  1.  1. 10. 11. 10.  3.\n",
+      "  8. 10.  4.  4.  4.  4.  4.  4.  4.  4.  5.  4. 10. 11. 10. 11. 11. 10.\n",
+      " 11.  3.  3.  3.  3.  3.  3.  3.  3.  3.  1.  1.  1.  1.  1.  1.  1.  1.\n",
+      "  1.  1.  1.  1.  1.  1.  2.  8.  8.  8. 11.  8.  8.  8.  2.  8.  8.  8.\n",
+      "  8.  8.]\n"
      ]
     }
    ],
@@ -960,13 +978,21 @@
     "y_pred = svm_model.predict(Test_scaled)\n",
     "\n",
     "\n",
-    "print(\"\\nPrediction labels for test set\")\n",
+    "print(\"\\nPrediction labels for test set 2\")\n",
     "print(y_pred)\n",
     "\n",
     "#print(\"Actual labels for training set\")\n",
     "#y_test_array = y_test.to_numpy()\n",
     "#print(y_test_array)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b36281ff-d17c-4f70-88d1-457b86262097",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -985,7 +1011,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
