--- a/Classification_5_CW_MH.ipynb
+++ b/Classification_5_CW_MH.ipynb
@@ -28,6 +28,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.impute import KNNImputer\n",
     "\n",
     "from sklearn.metrics import f1_score, accuracy_score, precision_score, recall_score, classification_report\n",
     "from sklearn import metrics  \n",
@@ -50,6 +51,13 @@
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing value percentage: 0.0 %\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -93,7 +101,7 @@
        "      <td>1.6</td>\n",
        "      <td>0.069</td>\n",
        "      <td>15.0</td>\n",
-       "      <td>59.000000</td>\n",
+       "      <td>59.0</td>\n",
        "      <td>0.996</td>\n",
        "      <td>3.30</td>\n",
        "      <td>0.46</td>\n",
@@ -107,7 +115,7 @@
        "      <td>6.1</td>\n",
        "      <td>0.071</td>\n",
        "      <td>17.0</td>\n",
-       "      <td>40.056541</td>\n",
+       "      <td>102.0</td>\n",
        "      <td>0.998</td>\n",
        "      <td>3.35</td>\n",
        "      <td>0.80</td>\n",
@@ -121,7 +129,7 @@
        "      <td>1.6</td>\n",
        "      <td>0.114</td>\n",
        "      <td>9.0</td>\n",
-       "      <td>29.000000</td>\n",
+       "      <td>29.0</td>\n",
        "      <td>0.997</td>\n",
        "      <td>3.26</td>\n",
        "      <td>1.56</td>\n",
@@ -135,7 +143,7 @@
        "      <td>1.8</td>\n",
        "      <td>0.092</td>\n",
        "      <td>35.0</td>\n",
-       "      <td>40.056541</td>\n",
+       "      <td>103.0</td>\n",
        "      <td>0.997</td>\n",
        "      <td>3.30</td>\n",
        "      <td>0.75</td>\n",
@@ -149,7 +157,7 @@
        "      <td>1.7</td>\n",
        "      <td>0.368</td>\n",
        "      <td>16.0</td>\n",
-       "      <td>56.000000</td>\n",
+       "      <td>56.0</td>\n",
        "      <td>0.997</td>\n",
        "      <td>3.11</td>\n",
        "      <td>1.28</td>\n",
@@ -177,7 +185,7 @@
        "      <td>2.2</td>\n",
        "      <td>0.060</td>\n",
        "      <td>12.0</td>\n",
-       "      <td>20.000000</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>0.995</td>\n",
        "      <td>3.26</td>\n",
        "      <td>0.64</td>\n",
@@ -191,7 +199,7 @@
        "      <td>1.7</td>\n",
        "      <td>0.053</td>\n",
        "      <td>24.0</td>\n",
-       "      <td>32.000000</td>\n",
+       "      <td>32.0</td>\n",
        "      <td>0.994</td>\n",
        "      <td>3.54</td>\n",
        "      <td>0.60</td>\n",
@@ -205,7 +213,7 @@
        "      <td>2.4</td>\n",
        "      <td>0.068</td>\n",
        "      <td>9.0</td>\n",
-       "      <td>26.000000</td>\n",
+       "      <td>26.0</td>\n",
        "      <td>0.995</td>\n",
        "      <td>3.36</td>\n",
        "      <td>0.60</td>\n",
@@ -219,7 +227,7 @@
        "      <td>1.7</td>\n",
        "      <td>0.053</td>\n",
        "      <td>24.0</td>\n",
-       "      <td>32.000000</td>\n",
+       "      <td>32.0</td>\n",
        "      <td>0.994</td>\n",
        "      <td>3.54</td>\n",
        "      <td>0.60</td>\n",
@@ -233,7 +241,7 @@
        "      <td>2.0</td>\n",
        "      <td>0.075</td>\n",
        "      <td>32.0</td>\n",
-       "      <td>44.000000</td>\n",
+       "      <td>44.0</td>\n",
        "      <td>0.995</td>\n",
        "      <td>3.57</td>\n",
        "      <td>0.71</td>\n",
@@ -245,18 +253,18 @@
        "</div>"
       ],
       "text/plain": [
-       "      0      1     2    3      4     5          6      7     8     9     10\n",
-       "0    7.9  0.600  0.06  1.6  0.069  15.0  59.000000  0.996  3.30  0.46   9.4\n",
-       "1    7.5  0.500  0.36  6.1  0.071  17.0  40.056541  0.998  3.35  0.80  10.5\n",
-       "2    7.8  0.610  0.29  1.6  0.114   9.0  29.000000  0.997  3.26  1.56   9.1\n",
-       "3    8.5  0.280  0.56  1.8  0.092  35.0  40.056541  0.997  3.30  0.75  10.5\n",
-       "4    8.1  0.560  0.28  1.7  0.368  16.0  56.000000  0.997  3.11  1.28   9.3\n",
-       "..   ...    ...   ...  ...    ...   ...        ...    ...   ...   ...   ...\n",
-       "475  7.5  0.520  0.40  2.2  0.060  12.0  20.000000  0.995  3.26  0.64  11.8\n",
-       "476  6.2  0.560  0.09  1.7  0.053  24.0  32.000000  0.994  3.54  0.60  11.3\n",
-       "477  7.4  0.350  0.33  2.4  0.068   9.0  26.000000  0.995  3.36  0.60  11.9\n",
-       "478  6.2  0.560  0.09  1.7  0.053  24.0  32.000000  0.994  3.54  0.60  11.3\n",
-       "479  5.9  0.645  0.12  2.0  0.075  32.0  44.000000  0.995  3.57  0.71  10.2\n",
+       "      0      1     2    3      4     5      6      7     8     9     10\n",
+       "0    7.9  0.600  0.06  1.6  0.069  15.0   59.0  0.996  3.30  0.46   9.4\n",
+       "1    7.5  0.500  0.36  6.1  0.071  17.0  102.0  0.998  3.35  0.80  10.5\n",
+       "2    7.8  0.610  0.29  1.6  0.114   9.0   29.0  0.997  3.26  1.56   9.1\n",
+       "3    8.5  0.280  0.56  1.8  0.092  35.0  103.0  0.997  3.30  0.75  10.5\n",
+       "4    8.1  0.560  0.28  1.7  0.368  16.0   56.0  0.997  3.11  1.28   9.3\n",
+       "..   ...    ...   ...  ...    ...   ...    ...    ...   ...   ...   ...\n",
+       "475  7.5  0.520  0.40  2.2  0.060  12.0   20.0  0.995  3.26  0.64  11.8\n",
+       "476  6.2  0.560  0.09  1.7  0.053  24.0   32.0  0.994  3.54  0.60  11.3\n",
+       "477  7.4  0.350  0.33  2.4  0.068   9.0   26.0  0.995  3.36  0.60  11.9\n",
+       "478  6.2  0.560  0.09  1.7  0.053  24.0   32.0  0.994  3.54  0.60  11.3\n",
+       "479  5.9  0.645  0.12  2.0  0.075  32.0   44.0  0.995  3.57  0.71  10.2\n",
        "\n",
        "[480 rows x 11 columns]"
       ]
@@ -270,17 +278,17 @@
     "Test = pd.read_csv(\"TestData5.csv\", header=None)\n",
     "\n",
     "#Replace all 1.000000e+99 with nan\n",
-    "Test[Test > 100] = np.nan\n",
+    "Test[Test > 1000] = np.nan\n",
     "\n",
-    "# Separate numerical columns\n",
-    "numerical_cols = Test.select_dtypes(include=['float64', 'int64']).columns\n",
+    "# Total number of entries\n",
+    "total = Test.size\n",
     "\n",
-    "# Imput missing values for numerical columns using the mean\n",
-    "for col in numerical_cols:\n",
-    "    if Test[col].isnull().sum() > 0:\n",
-    "        mean_value = Test[col].mean()\n",
-    "        Test[col] = Test[col].fillna(mean_value)\n",
-    "        #print(f\"Imputed missing values in '{col}' with mean: {mean_value}\")\n",
+    "# Count of NaN values\n",
+    "nan_count = Test.isna().sum().sum()\n",
+    "\n",
+    "# Count of Non-NaN values\n",
+    "non_nan_count = total - nan_count\n",
+    "print(\"Missing value percentage:\",nan_count/total * 100,\"%\")\n",
     "Test"
    ]
   },
@@ -292,6 +300,13 @@
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing value percentage: 0.0 %\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -330,7 +345,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>7.4</td>\n",
        "      <td>0.70</td>\n",
        "      <td>0.00</td>\n",
@@ -345,7 +360,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>7.8</td>\n",
        "      <td>0.88</td>\n",
        "      <td>0.00</td>\n",
@@ -360,7 +375,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>7.8</td>\n",
        "      <td>0.76</td>\n",
        "      <td>0.04</td>\n",
@@ -375,7 +390,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>11.2</td>\n",
        "      <td>0.28</td>\n",
        "      <td>0.56</td>\n",
@@ -390,7 +405,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>7.4</td>\n",
        "      <td>0.70</td>\n",
        "      <td>0.00</td>\n",
@@ -420,7 +435,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1114</th>\n",
-       "      <td>6</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>6.8</td>\n",
        "      <td>0.62</td>\n",
        "      <td>0.08</td>\n",
@@ -435,7 +450,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1115</th>\n",
-       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>6.2</td>\n",
        "      <td>0.60</td>\n",
        "      <td>0.08</td>\n",
@@ -450,7 +465,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1116</th>\n",
-       "      <td>6</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>5.9</td>\n",
        "      <td>0.55</td>\n",
        "      <td>0.10</td>\n",
@@ -465,7 +480,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1117</th>\n",
-       "      <td>6</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>6.3</td>\n",
        "      <td>0.51</td>\n",
        "      <td>0.13</td>\n",
@@ -480,7 +495,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1118</th>\n",
-       "      <td>6</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>0.31</td>\n",
        "      <td>0.47</td>\n",
@@ -499,18 +514,18 @@
        "</div>"
       ],
       "text/plain": [
-       "      0     1     2     3    4      5     6     7      8     9     10    11\n",
-       "0      5   7.4  0.70  0.00  1.9  0.076  11.0  34.0  0.998  3.51  0.56   9.4\n",
-       "1      5   7.8  0.88  0.00  2.6  0.098  25.0  67.0  0.997  3.20  0.68   9.8\n",
-       "2      5   7.8  0.76  0.04  2.3  0.092  15.0  54.0  0.997  3.26  0.65   9.8\n",
-       "3      6  11.2  0.28  0.56  1.9  0.075  17.0  60.0  0.998  3.16  0.58   9.8\n",
-       "4      5   7.4  0.70  0.00  1.9  0.076  11.0  34.0  0.998  3.51  0.56   9.4\n",
-       "...   ..   ...   ...   ...  ...    ...   ...   ...    ...   ...   ...   ...\n",
-       "1114   6   6.8  0.62  0.08  1.9  0.068  28.0  38.0  0.997  3.42  0.82   9.5\n",
-       "1115   5   6.2  0.60  0.08  2.0  0.090  32.0  44.0  0.995  3.45  0.58  10.5\n",
-       "1116   6   5.9  0.55  0.10  2.2  0.062  39.0  51.0  0.995  3.52  0.76  11.2\n",
-       "1117   6   6.3  0.51  0.13  2.3  0.076  29.0  40.0  0.996  3.42  0.75  11.0\n",
-       "1118   6   6.0  0.31  0.47  3.6  0.067  18.0  42.0  0.995  3.39  0.66  11.0\n",
+       "       0     1     2     3    4      5     6     7      8     9     10    11\n",
+       "0     5.0   7.4  0.70  0.00  1.9  0.076  11.0  34.0  0.998  3.51  0.56   9.4\n",
+       "1     5.0   7.8  0.88  0.00  2.6  0.098  25.0  67.0  0.997  3.20  0.68   9.8\n",
+       "2     5.0   7.8  0.76  0.04  2.3  0.092  15.0  54.0  0.997  3.26  0.65   9.8\n",
+       "3     6.0  11.2  0.28  0.56  1.9  0.075  17.0  60.0  0.998  3.16  0.58   9.8\n",
+       "4     5.0   7.4  0.70  0.00  1.9  0.076  11.0  34.0  0.998  3.51  0.56   9.4\n",
+       "...   ...   ...   ...   ...  ...    ...   ...   ...    ...   ...   ...   ...\n",
+       "1114  6.0   6.8  0.62  0.08  1.9  0.068  28.0  38.0  0.997  3.42  0.82   9.5\n",
+       "1115  5.0   6.2  0.60  0.08  2.0  0.090  32.0  44.0  0.995  3.45  0.58  10.5\n",
+       "1116  6.0   5.9  0.55  0.10  2.2  0.062  39.0  51.0  0.995  3.52  0.76  11.2\n",
+       "1117  6.0   6.3  0.51  0.13  2.3  0.076  29.0  40.0  0.996  3.42  0.75  11.0\n",
+       "1118  6.0   6.0  0.31  0.47  3.6  0.067  18.0  42.0  0.995  3.39  0.66  11.0\n",
        "\n",
        "[1119 rows x 12 columns]"
       ]
@@ -526,17 +541,26 @@
     "df = pd.concat([Label,Train], axis=1, ignore_index=True)\n",
     "\n",
     "#Replace all 1.000000e+99 with nan\n",
-    "df[df > 100] = np.nan\n",
+    "df[df > 1000] = np.nan\n",
     "\n",
-    "# Separate numerical columns\n",
-    "numerical_cols = df.select_dtypes(include=['float64', 'int64']).columns\n",
+    "# Total number of entries\n",
+    "total = df.size\n",
     "\n",
-    "# Imput missing values for numerical columns using the mean\n",
-    "for col in numerical_cols:\n",
-    "    if df[col].isnull().sum() > 0:\n",
-    "        mean_value = df[col].mean()\n",
-    "        df[col] = df[col].fillna(mean_value)\n",
-    "        #print(f\"Imputed missing values in '{col}' with mean: {mean_value}\")\n",
+    "# Count of NaN values\n",
+    "nan_count = df.isna().sum().sum()\n",
+    "\n",
+    "# Count of Non-NaN values\n",
+    "non_nan_count = total - nan_count\n",
+    "print(\"Missing value percentage:\",nan_count/total * 100,\"%\")\n",
+    "\n",
+    "# Initialize the KNNImputer\n",
+    "imputer = KNNImputer(n_neighbors=5) \n",
+    "\n",
+    "# Fit and transform the data\n",
+    "imputed_data = imputer.fit_transform(df)\n",
+    "\n",
+    "# Convert the result back to a DataFrame\n",
+    "df = pd.DataFrame(imputed_data, columns=df.columns)\n",
     "df"
    ]
   },
@@ -559,9 +583,9 @@
      "output_type": "stream",
      "text": [
       "Accuracy: 0.5803571428571429\n",
-      "F1 Score: 0.525058810556495\n",
+      "F1 Score: 0.5275004266939751\n",
       "Recall: 0.5803571428571429\n",
-      "Precision: 0.5924946495781162\n"
+      "Precision: 0.6009615384615384\n"
      ]
     }
    ],
@@ -616,10 +640,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.5803571428571429\n",
-      "F1 Score: 0.5637251166573912\n",
-      "Recall: 0.5803571428571429\n",
-      "Precision: 0.594673888512751\n"
+      "Accuracy: 0.5892857142857143\n",
+      "F1 Score: 0.5738004920176162\n",
+      "Recall: 0.5892857142857143\n",
+      "Precision: 0.6117204533300423\n"
      ]
     }
    ],
@@ -636,8 +660,8 @@
     "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
     "\n",
-    "# Initialize the KNN classifier with k=5\n",
-    "knn_model = KNeighborsClassifier(n_neighbors=5)\n",
+    "# Initialize the KNN classifier, 9 seems to be best\n",
+    "knn_model = KNeighborsClassifier(n_neighbors=9)\n",
     "\n",
     "# Train the model\n",
     "knn_model.fit(X_train_scaled, y_train)\n",
@@ -676,20 +700,27 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Prediction labels for test set\n",
-      "[5 6 6 6 5 5 5 5 5 6 6 5 6 5 5 5 5 5 5 6 6 5 6 6 5 5 5 6 5 5 5 5 5 5 5 6 5\n",
-      " 6 5 3 6 5 5 5 5 5 6 6 5 6 5 5 5 5 5 5 5 5 5 5 5 5 5 6 6 5 5 6 5 6 6 6 5 5\n",
-      " 5 5 5 6 6 5 5 5 6 6 6 6 6 5 5 6 5 5 5 6 5 6 6 6 6 5 6 6 6 5 5 6 6 6 6 6 6\n",
-      " 5 5 5 5 5 5 6 5 6 6 6 5 6 6 5 6 6 6 6 6 5 6 5 5 5 6 6 6 5 5 5 6 6 6 6 6 6\n",
-      " 5 6 5 5 6 6 5 6 6 6 6 5 5 6 5 6 5 6 6 6 5 5 6 6 6 6 5 5 5 5 6 6 6 5 5 5 5\n",
-      " 6 6 6 5 5 6 6 5 5 5 6 5 5 5 6 5 6 6 5 6 5 5 5 5 5 5 5 5 5 6 5 5 6 5 6 5 5\n",
-      " 6 6 5 5 6 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 6 5 5 5 6 6 6 6 6 6 5 5 6 6\n",
-      " 6 6 6 5 5 6 5 6 6 6 6 6 6 5 6 6 5 5 5 6 6 6 6 6 6 6 6 6 6 6 6 5 6 6 6 6 5\n",
-      " 6 6 5 5 5 5 6 6 6 6 6 6 6 6 6 6 6 6 5 5 6 6 6 6 5 6 6 6 5 6 6 6 5 5 6 6 6\n",
-      " 6 6 6 6 6 6 6 6 6 6 6 6 6 5 5 6 6 6 6 6 5 6 6 6 5 6 5 5 5 6 6 6 6 6 6 5 6\n",
-      " 6 5 5 5 6 6 5 6 6 5 5 6 6 5 6 6 5 6 5 6 5 6 6 5 5 5 5 5 6 5 5 6 6 6 5 5 5\n",
-      " 5 6 5 5 5 5 6 6 5 5 5 5 6 5 5 6 6 6 6 6 5 5 6 6 5 5 5 6 5 6 5 5 6 5 6 5 5\n",
-      " 6 5 5 6 6 6 6 6 6 5 5 5 6 6 5 6 6 5 6 6 6 6 5 6 6 5 5 6 6 5 6 6 6 6 6 5]\n"
+      "Prediction labels for test set 5\n",
+      "[5. 5. 5. 6. 5. 5. 6. 5. 6. 5. 5. 5. 6. 5. 5. 5. 5. 5. 5. 6. 6. 5. 6. 6.\n",
+      " 5. 5. 5. 5. 5. 6. 6. 5. 5. 5. 5. 5. 5. 6. 5. 6. 7. 5. 6. 5. 5. 5. 6. 5.\n",
+      " 5. 5. 5. 6. 5. 6. 6. 5. 5. 6. 5. 5. 5. 5. 5. 6. 5. 5. 6. 7. 6. 5. 6. 5.\n",
+      " 6. 5. 5. 5. 6. 6. 6. 6. 5. 6. 6. 6. 7. 6. 6. 5. 5. 6. 5. 6. 5. 6. 5. 6.\n",
+      " 6. 6. 5. 6. 7. 6. 7. 6. 5. 7. 6. 6. 7. 5. 6. 5. 6. 5. 6. 5. 6. 6. 5. 6.\n",
+      " 7. 5. 5. 6. 7. 4. 6. 6. 6. 7. 6. 5. 6. 6. 6. 5. 6. 6. 7. 5. 5. 6. 5. 6.\n",
+      " 7. 6. 6. 6. 6. 7. 5. 6. 5. 6. 5. 5. 6. 5. 7. 6. 6. 6. 6. 5. 6. 6. 5. 5.\n",
+      " 5. 6. 6. 6. 6. 5. 5. 5. 5. 5. 6. 6. 6. 6. 5. 5. 5. 7. 6. 6. 5. 5. 7. 6.\n",
+      " 5. 6. 5. 6. 5. 5. 5. 6. 5. 5. 6. 6. 6. 6. 6. 5. 5. 5. 5. 5. 5. 5. 6. 5.\n",
+      " 5. 6. 5. 6. 5. 5. 5. 6. 5. 5. 6. 6. 5. 5. 5. 5. 5. 6. 5. 5. 5. 5. 5. 5.\n",
+      " 6. 5. 5. 5. 5. 5. 5. 5. 6. 5. 6. 6. 6. 7. 6. 5. 5. 6. 6. 6. 5. 6. 6. 6.\n",
+      " 6. 5. 6. 6. 6. 6. 6. 6. 6. 6. 6. 5. 5. 5. 7. 7. 6. 5. 6. 5. 5. 7. 7. 6.\n",
+      " 7. 6. 5. 6. 7. 6. 6. 5. 6. 5. 5. 5. 6. 5. 5. 6. 6. 7. 7. 7. 7. 5. 7. 6.\n",
+      " 6. 6. 5. 6. 6. 6. 7. 5. 5. 6. 6. 6. 6. 6. 6. 5. 5. 5. 6. 6. 5. 6. 6. 7.\n",
+      " 6. 5. 7. 6. 6. 5. 6. 6. 5. 7. 5. 5. 6. 6. 6. 6. 6. 6. 6. 6. 7. 5. 5. 5.\n",
+      " 5. 5. 7. 7. 7. 5. 6. 6. 6. 6. 6. 5. 6. 5. 5. 6. 5. 5. 6. 5. 5. 5. 6. 5.\n",
+      " 6. 7. 5. 5. 5. 6. 5. 6. 7. 5. 6. 5. 5. 6. 5. 6. 5. 7. 6. 6. 6. 6. 5. 5.\n",
+      " 6. 5. 5. 5. 6. 6. 6. 6. 5. 7. 5. 5. 5. 5. 6. 6. 6. 5. 6. 5. 6. 6. 6. 6.\n",
+      " 5. 6. 6. 6. 6. 6. 5. 6. 6. 7. 5. 6. 6. 5. 5. 6. 5. 6. 6. 6. 7. 5. 5. 5.\n",
+      " 6. 6. 5. 6. 6. 5. 6. 6. 6. 6. 5. 6. 6. 5. 5. 7. 6. 5. 6. 6. 6. 7. 6. 6.]\n"
      ]
     }
    ],
@@ -706,23 +737,31 @@
     "X_test_scaled = scaler.transform(X_test)\n",
     "Test_scaled = scaler.transform(Test)\n",
     "\n",
-    "# Create an SVM model with a linear kernel\n",
-    "svm_model = SVC(kernel='linear', random_state=42)\n",
+    "# Initialize the KNN classifier\n",
+    "knn_model = KNeighborsClassifier(n_neighbors=9)\n",
     "\n",
     "# Train the model\n",
-    "svm_model.fit(X_train_scaled, y_train)\n",
+    "knn_model.fit(X_train_scaled, y_train)\n",
     "\n",
     "# Make predictions on the test set\n",
-    "y_pred = svm_model.predict(Test_scaled)\n",
+    "y_pred = knn_model.predict(Test_scaled)\n",
     "\n",
     "\n",
-    "print(\"\\nPrediction labels for test set\")\n",
+    "print(\"\\nPrediction labels for test set 5\")\n",
     "print(y_pred)\n",
     "\n",
     "#print(\"Actual labels for training set\")\n",
     "#y_test_array = y_test.to_numpy()\n",
     "#print(y_test_array)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46b23bae-2b11-4638-bf09-9fee7697b1fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -741,7 +780,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
